# aichess

./: .gitignore  AGENTS.md  CLI_USAGE.md  CODE_OPTIMIZATION_SUMMARY.md  Cargo.toml  DEMO.md  FEATURES_UPDATE.md  FINAL_OPTIMIZATION_REPORT.md  GUI_TECH_SELECTION.md  GUI_USAGE.md  OPTIMIZATION_SUMMARY.md  TRAINING_TIME_ESTIMATE.md  readme.md  test_games.pgn
logs/: git_diff.patch  git_hash
logs/models/: model_0.ot
src/: board.rs  cchess.rs  fen.rs  game.rs  lib.rs  mcts.rs  moves.rs  net.rs  position.rs  pregen.rs  train.rs
src/gui/: app.rs  mod.rs  views.rs  widgets.rs
src/pos/: fen.rs  game.rs  mod.rs  moves.rs  position.rs  pregen.rs
src/synthesis/: alpha_zero.rs  burn_support.rs  config.rs  data.rs  evaluator.rs  game.rs  mcts.rs  mod.rs  pgn.rs  utils.rs
src/synthesis/policies/: cache.rs  rollout.rs  traits.rs
src/tests/data/: right_smv_sms.txt
test_logs/: env_name  git_diff.patch  git_hash
