[package]
name = "aichess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
resvg = "0.36.0"
rstest = "0.18.2"
toto = "0.1.0"

serde = { version = "1.0", features = ["derive"] }
#serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
burn = "0.15.0"
tokio = { version = "1.43.0", features = ["full"]  }



ordered-float = "2.5.0"
chrono = "0.4.3"
log = "0.4.14"
env_logger = "0.8.3"
torch-sys = "0.4.1"
indicatif = "0.16.2"

rand_distr = "0.4"

[[bin]]
name = "fen2svg"
path = "src/bin/fen2svg.rs"


[dev-dependencies]
